src/pages/home.scss
.container--homepage a:hover {
  text-decoration: none;
}

.banner-text {
  font-size: 3.75rem;
  font-weight: 300;
  line-height: 1.2;
  padding-bottom: 1.5rem !important;
  max-width: 36rem;
  width: 90%;
}

.getting-started {
  background-color: #161616;
  display: flex;
  max-width: 74.25rem;
  padding-top: 2.375rem;
  padding-bottom: 3rem;

  .card a {
    background: none;
  }

  .card .gatsby-resp-image-wrapper {
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
    margin-bottom: inherit;
  }

  h5 {
    font-size: 1.25rem;
  }

  &.tablet {
    display: none;
  }

  @media (max-width: 1056px) and (min-width: 672px) {
    & {
      display: none;
    }

    &.tablet {
      display: flex;
    }
  }
}

// TODO remove
.temp {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.contribute {
  padding-top: 3.5rem;

  h3,
  h4 {
    margin-top: 0 !important;
  }
}

.callout {
  > div {
    padding-bottom: 4rem;
    padding-top: 4rem;
  }

  h5 {
    font-size: 1.25rem;
    font-weight: 400;
  }
}

.hidden {
  display: none;
}

